--- a/_config.yml
+++ b/_config.yml
@@ -78,12 +78,12 @@ analytics:
 # Site Author
 author:
   name             : "Jiazhao Li"
-  avatar           : "" # "jianli.jpg" #
+  avatar           : "JL.jpg" # "jianli.jpg" #
   bio              : "Ph.D student @ University of Michigan"
   location         : "Ann Arbor, MI"
   employer         : 
   googlescholar    : 
-  email            : ""
+  email            : "jiazhaol@umich.edu"
   uri              : 
   bitbucket        :
   codepen          :
