--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Jiazhao Li"
   avatar           : "https://jiazhaoli.github.io/images/JL.jpg" # "jianli.jpg" #
-  bio              : "Ph.D student @ University of Michigan"
+  bio              : "Ph.D. student @ University of Michigan"
   location         : "Ann Arbor, MI"
   employer         : 
   googlescholar    : 
