--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Jiazhao Li"
 description              : &description "Ph.D. student @ University of Michigan"
 url                      : https://jiazhaoli.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : ""
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiazhao Li"
-  avatar           : "https://jiazhaoli.github.io/images/JL.jpg" # "jianli.jpg" #
+  avatar           : "JL.jpg" # "jianli.jpg" #
   bio              : "Ph.D. student @ University of Michigan"
   location         : "Ann Arbor, MI"
   employer         : 
