--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Ph.D. student @ University of Michigan"
   location         : "Ann Arbor, MI"
   employer         : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=dDJCGpYAAAAJ&hl=en&oi=ao"
   email            : "jiazhaol@umich.edu"
   uri              : 
   bitbucket        :
