--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "avatar.jpg" # "jianli.jpg" #
   bio              : "Ph.D. student @ University of Michigan"
   location         : "Ann Arbor, MI"
-  employer         : 
+  employer         : NLP4Health Lab
   googlescholar    : "https://scholar.google.com/citations?user=dDJCGpYAAAAJ&hl=en&oi=ao"
   email            : "jiazhaol@umich.edu"
   uri              : 
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : 
+  linkedin         : "https://www.linkedin.com/in/jiazhao-l-b5111714a/"
   orcid            : 
   pinterest        :
   soundcloud       :
