--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jiazhao-l-b5111714a/"
+  linkedin         : "jiazhao-l-b5111714a/"
   orcid            : 
   pinterest        :
   soundcloud       :
