--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "avatar.jpg" # "jianli.jpg" #
   bio              : "Ph.D. student @ University of Michigan"
   location         : "Ann Arbor, MI"
-  employer         : NLP4Health Lab
+  employer         : "NLP4Health Lab"
   googlescholar    : "https://scholar.google.com/citations?user=dDJCGpYAAAAJ&hl=en&oi=ao"
   email            : "jiazhaol@umich.edu"
   uri              : 
