--- a/_config.yml
+++ b/_config.yml
@@ -79,9 +79,9 @@ analytics:
 author:
   name             : "Jiazhao Li"
   avatar           : "avatar.jpg" # "jianli.jpg" #
-  bio              : "Ph.D. student @ University of Michigan"
-  location         : "Ann Arbor, MI"
-  employer         : "NLP4Health Lab"
+  bio              : "Ph.D."
+  location         : "Ann Arbor"
+  employer         : "University of Michigan"
   googlescholar    : "https://scholar.google.com/citations?user=dDJCGpYAAAAJ&hl=en&oi=ao"
   email            : "jiazhaol@umich.edu"
   uri              : 
